--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "sass": "^1.32.7",
+    "web-vitals": "^0.2.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "react-toggle": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
