--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "csv-parser": "^3.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.14"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
+    "mongodb-memory-server": "^6.9.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3",
-    "mongodb-memory-server": "^6.9.3"
+    "supertest": "^6.1.3"
   }
 }
