--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.16",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "mocha": "^8.3.0",
     "mongodb-memory-server": "^6.9.3",
     "nodemon": "^2.0.7",
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0",
     "supertest": "^6.1.3"
   }
 }
