--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.16",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "mocha": "^8.3.0",
