--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,14 @@
     "@testing-library/user-event": "^12.6.2",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "^4.0.1",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
-    "react-scripts": "4.0.1",
-    "reactstrap": "^8.9.0",
-    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
