--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "reactstrap": "^8.9.0",
     "sass": "^1.32.7",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "http-server": "^0.12.3"
   },
   "scripts": {
     "start": "react-scripts start",
