--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^8.3.0",
     "mongodb-memory-server": "^6.9.3",
     "nodemon": "^2.0.7",
+    "should": "^13.2.3",
     "supertest": "^6.1.3"
   }
 }
