--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "assert": "^2.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^8.3.0",
